--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "chart.js": "^4.4.7",
+    "frontend": "file:",
+    "idb": "^8.0.0",
+    "jwt-decode": "^4.0.0",
+    "ng2-currency-mask": "^13.0.3",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.12",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
